Bug fixes and updates.

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,10 @@ upstream genes {
         server 127.0.0.1:8300;
 }
 
+upstream genes2 {
+        server 127.0.0.1:9000;
+}
+
 upstream dna {
         server 127.0.0.1:8200;
 }
@@ -21,6 +25,10 @@ server {
 
         location /genes {
                 proxy_pass http://genes;
+        }
+
+	location /genes/api/v2 {
+                proxy_pass http://genes2;
         }
 
 	location /dna {
