--- a/nginx.conf
+++ b/nginx.conf
@@ -24,12 +24,12 @@ server {
         }
 
         location /genes {
-                proxy_pass http://genes;
-        }
-
-	location /genes/api/v2 {
                 proxy_pass http://genes2;
         }
+
+	#location /genes/api/v2 {
+        #        proxy_pass http://genes2;
+        #}
 
 	location /dna {
                 proxy_pass http://dna;
