Bug fixes and updates.

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ upstream dna {
 }
 
 server {
-	server_name localhost 52.206.83.98 apps.rdf-lab.org ec2-3-227-65-90.compute-1.amazonaws.com d3f2vops2ix6hq.cloudfront.net;
+	server_name localhost 52.206.83.98 3.227.65.90 apps.rdf-lab.org ec2-3-227-65-90.compute-1.amazonaws.com d3f2vops2ix6hq.cloudfront.net;
 	listen 80;
 	listen [::]:80;
 
