Bug fixes and updates.

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,12 +24,12 @@ server {
         }
 
         location /genes {
-                proxy_pass http://genes2;
+                proxy_pass http://genes;
         }
 
-	#location /genes/api/v2 {
-        #        proxy_pass http://genes2;
-        #}
+	location ~ ^/blob(/?)(.*) {
+                proxy_pass http://genes2/$2;
+        }
 
 	location /dna {
                 proxy_pass http://dna;
