--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ server {
                 proxy_pass http://genes;
         }
 
-	location ~ ^/blob(/?)(.*) {
+	location ~ ^/genes/api/v2(/?)(.*) {
                 proxy_pass http://genes2/$2;
         }
 
